// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Box Different padding for different screen sizes  1`] = `
.c2 {
  padding: 8px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
  background: repeating-linear-gradient( -45deg, #FFCF00, #FFCF00 8px, hsl(48.69999999999999,100%,75%) 8px, hsl(48.69999999999999,100%,75%) 16px );
}

.c3 {
  background-color: #F5F5F5;
}

@media (min-width:760px) {
  .c1 {
    padding: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <span
          className="c4"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin 1`] = `
.c1 {
  margin: 16px;
}

.c2 {
  padding: 8px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
  background: repeating-linear-gradient( -45deg, #FFCF00, #FFCF00 8px, hsl(48.69999999999999,100%,75%) 8px, hsl(48.69999999999999,100%,75%) 16px );
}

.c3 {
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <span
        className="c4"
      >
        Some random content here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin and different margin Y-axis 1`] = `
.c1 {
  margin: 32px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c2 {
  padding: 8px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
  background: repeating-linear-gradient( -45deg, #FFCF00, #FFCF00 8px, hsl(48.69999999999999,100%,75%) 8px, hsl(48.69999999999999,100%,75%) 16px );
}

.c3 {
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <span
        className="c4"
      >
        Some random content here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding  1`] = `
.c1 {
  padding: 32px;
}

.c2 {
  padding: 8px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
  background: repeating-linear-gradient( -45deg, #FFCF00, #FFCF00 8px, hsl(48.69999999999999,100%,75%) 8px, hsl(48.69999999999999,100%,75%) 16px );
}

.c3 {
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <span
          className="c4"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding and different X-axis and left  1`] = `
.c1 {
  padding: 32px;
  padding-left: 0px;
  padding-right: 16px;
}

.c2 {
  padding: 8px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
  background: repeating-linear-gradient( -45deg, #FFCF00, #FFCF00 8px, hsl(48.69999999999999,100%,75%) 8px, hsl(48.69999999999999,100%,75%) 16px );
}

.c3 {
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <span
          className="c4"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;
